# recipe-app-api

./: .gitignore  Dockerfile  README.md  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
app/app/: settings.py  urls.py
app/core/migrations/: 0001_initial.py
app/recipe/: serializers.py
proxy/: Dockerfile
