[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Helena Oliveira", email = "helena@informach.com.br"},
]
dependencies = []
requires-python = ">=3.10.2"
license = {text = "MIT"}

[project.urls]
homepage = ""

[project.optional-dependencies]
[tool]
[tool.pdm]

[tool.pdm.scripts]
test = "python -m unittest"

[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=1.6.0",
    "pylint>=2.13.9",
    "pytest>=7.1.2",
]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
